Icons for create canvs btts and complete code refactor (wip)

--- a/assets/lang/en_US.json
+++ b/assets/lang/en_US.json
@@ -1,6 +1,8 @@
 {
 
     "m_recent_title": "Recent",
+    "m_new_vec_canvas": "New Vector Canvas",
+    "m_new_pix_canvas": "New Pixel Canvas",
 
     "title_editor": "Grapheno",
     "title_starthub": "Start Hub"
