--- a/assets/lang/fr_FR.json
+++ b/assets/lang/fr_FR.json
@@ -1,6 +1,7 @@
 {
 
     "m_recent_title": "Récent",
+    "m_new_vec_canvas": "Nouvelle Toile de Vecteur",
 
     "title_editor": "Grapheno",
     "title_starthub": "Démarrer Hub"
