Start to implement Pixi for canvas rendering

--- a/assets/lang/fr_FR.json
+++ b/assets/lang/fr_FR.json
@@ -2,6 +2,7 @@
 
     "m_recent_title": "Récent",
     "m_new_vec_canvas": "Nouvelle Toile de Vecteur",
+    "m_new_pix_canvas": "Nouvelle Toile de Pixels",
 
     "title_editor": "Grapheno",
     "title_starthub": "Démarrer Hub"
